# DNA2PROT2

./: .gitignore  README.md  app.py  dna2protein2.py  pyproject.toml  requirements.txt
