[tool.poetry]
name = "dna2prot2"
version = "0.1.0"
description = "Another version of DNA2PROTEIN with cleaner code."
authors = ["Bjorn99 <67769176+Bjorn99@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
Werkzeug = "^3.1.2"
#typing = "^3.10.0.0"
#functools = "^0.5"
collections2 = "^0.3.0"
biopython = "^1.84"
python-dotenv = "0.20"
gunicorn = "^22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
